--- a/examples/chain/0_LocalOrderHash/CMakeLists.txt
+++ b/examples/chain/0_LocalOrderHash/CMakeLists.txt
@@ -20,7 +20,7 @@ CPMAddPackage(NAME InjectiveSDK SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
 
 # ---- Create standalone executable ----
 
-file(GLOB sources CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
+file(GLOB sources CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)
 
 add_executable(${PROJECT_NAME} ${sources})
 
