--- a/.github/workflows/standalone.yml
+++ b/.github/workflows/standalone.yml
@@ -19,6 +19,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: eWaterCycle/setup-grpc@v5
+        with:
+          grpc-version: 1.51.1
 
       - uses: actions/cache@v2
         with:
